--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/me-modified.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dev Ali</title>
+    <title>Dev yuosef</title>
     <link rel="stylesheet" href="/style.css">
   </head>
   <body>
